--- a/html/wallace.html
+++ b/html/wallace.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
     <div class="container">
-      <h1 class="h1">Bienvenue sur le site de Freeze Corleone</h1>
+      <h1 class="h1">Bienvenue sur le site de Wallace Cleaver</h1>
 
       <div class="card-video">
           <video class="video-content" controls>
@@ -56,8 +56,8 @@
               Votre navigateur ne supporte pas la balise vidéo.
           </video>
           <div class="card-content">
-              <h2 class="card-title">Encore les Problèmes</h2>
-              <p class="card-description">Découvrez le clip officiel de "Encore les Problèmes", un titre marquant de Freeze Corleone et Kalash Criminel.</p>
+              <h2 class="card-title">Merci pour la douleur</h2>
+              <p class="card-description">Découvrez le clip officiel de "Merci pour la douleur", un titre marquant de Wallace Cleaver introspectif dans son univers parallèle.</p>
               <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=30hT9-6cla4', '_blank')">Regarder sur YouTube</button>
           </div>
       </div>
